# Debug-Team_Module01

./: .gitattributes  .gitignore  README.md  environment.yml  implementation_plan.md  inspect_mapped_questions.py  main.py  map_questions_to_chroma.py  pyproject.toml  requirements.txt  test_chroma.py  top_10_pipeline_tieu_chi_1.csv  top_10_pipeline_tieu_chi_2.csv
data/: pre_retrieval_cache.json
reports/: ablation_dunnett_hit_rate_at_5_report.csv  ablation_dunnett_mrr_at_5_report.csv  ablation_dunnett_ndcg_at_5_report.csv  ablation_dunnett_recall_at_5_report.csv  anova_explanation.md  anova_interactions.csv  anova_main_effects.csv  anova_three_pillars.csv  custom_analysis_report.md  pillar_analysis_summary.md  rag_ablation_dunnett_report.csv  ragas_evaluation_checkpoint_local.csv  ragas_evaluation_checkpoint_local_90_final.csv  ragas_evaluation_checkpoint_local_90_new.csv  ragas_evaluation_checkpoint_local_90_rerun.csv  ragas_evaluation_checkpoint_local_test.csv  ragas_evaluation_checkpoint_test.csv  stage1_screening_logs.csv  stage2_deep_eval_results.csv
results/: stage1_screening_logs.csv
src/: bm25_retriever.py  generate_ground_truth_chunk_ids.py  hybrid_retriever.py  index_manager.py  metrics.py  rag_bench.py  retrievers.py  stage1_screening.py  test_bm25.py  test_bm25_one_question.py  test_bm25_retriever.py  test_compare_chunking.py  test_dense_retriever.py  test_ground_truth.py  test_hybrid_one_question.py  test_index_manager.py  test_load_all_chunks.py  test_load_chunks_batch.py  test_load_collection_docs.py  test_metadata.py  test_metrics.py  test_pipeline.py  (+7 more)
(+72 files in other folders)
